# CISO

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  interactive-run.sh  manifest.json  old_run.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.sh
.gitlab/merge_request_templates/: default.md
app/: MRM_29273_triplane_SRImageReconViaANTS.py  alternative.sh  beta-gear.sh  beta_triplane_SRImageReconViaANTS.py  ciso-gear.sh  combinePlanes.sh  command_line.py  findMatchedScans.py  generate_command.py  parser.py  run_combinePlanes.sh
app/arc/: OG-Dockerfile  old_run.py
ciso-0.0.5-beta-6384d9936c12475dccafc3fc/: .input_map.json  manifest.json
ciso-BETA.0.1.9-649060d1da041105a9e4deb9/: .input_map.json  manifest.json
data/: site-UCT_sub-D202-5-003-01_ZB_ses-20220208_hyperfine_T2w_axi.json  site-UCT_sub-D202-5-003-01_ZB_ses-20220208_hyperfine_T2w_cor.json  site-UCT_sub-D202-5-003-01_ZB_ses-20220208_hyperfine_T2w_sag.json
docs/: GitHub Branches.md  changelog.md  gearDev.md  release_notes.md
fw_gear_ants_ciso/: context.py  generate_command.py  main.py  parser.py
fw_gear_bids_ants-ciso/: __init__.py  khula-synthseg.sh
fw_gear_bids_ants_ciso/: combinePlanes.sh  parser.py
fw_gear_bids_qsiprep/: main.py  parser.py
tests/: Dockerfile  README.md  conftest.py  test_main.py  test_parser.py  test_run.py  test_utils.py
tests/end-to-end_tests/: test_boilerplate.py  test_start_run.py
tests/integration_tests/: test_dry_run.py
utils/: demo.py  niftiHeader.py  tag.py
